--- a/verification/pom.xml
+++ b/verification/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>vavr</artifactId>
             <version>0.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.6</version>
+        </dependency>
 
     </dependencies>
 
